# powpal

./: .gitignore  CLAUDE.md  Makefile  PowPal_Explore.qgz  README.md  batch_ingest.sh  environment.yml  interactive_map.ipynb  points_to_runs.ipynb  pyproject.toml  run_stats.ipynb  users.json
data/processed/: run_split_tracks.geojson  run_stats_valid_runs.geojson  track_points_valid_runs_only.geojson  track_points_with_nearest_piste.geojson
data/raw/pistes/: vicheres_liddes.geojson
docs/: index.html
notebooks/archive/: 01_standardising_piste_data.ipynb  interactive_map.ipynb  points_to_runs.ipynb  run_stats.ipynb  testing_exploration.ipynb
powpal/: gpx_parser.py  leaderboard.py  piste_matcher.py  run_segmenter.py  timing.py
scripts/: export_qgis.py  ingest.py  render_map.py
tests/: test_gpx_parser.py  test_piste_matcher.py  test_run_segmenter.py
tests/fixtures/: Slopes_A_day_snowboarding_at_Vichères_Liddes.gpx
